--- a/text/DP_pasovska.tex
+++ b/text/DP_pasovska.tex
@@ -382,7 +382,116 @@ Kromě fotografií bylo využito i historických pohlednic zachycujících Otavu
 \section{Data pro tvorbu dílčích tematických map}
 
 
+\chapter{Transformace}
+V rámci práce byla potřebná důkladná znalost transformace, která byla využita při georeferencování mapových podkladů. Transformací lze označit proces, při němž dochází k přechodu z jedné soustavy do druhé. Pro každý druh transformace je požadované odlišné množství vlícovacích bodů, tedy takových bodů,  jejichž souřadnice jsou známy a jejichž poloha lze jednoznačně identifikovat v obou soustavách.
+
+Při výpočtu transformací je hlavním cílem výpočet transformačního klíče. Transformační klíč umožňuje převod souřadnic z jedné soustavy do druhé a obsahuje v sobě hodnotu posunu počátků souřadnicových systémů, stočení souřadnicových os a změnu měřítka. K jeho určení je potřebná znalost nutného či nadbytečného počtu identických bodů. 
+
+V této kapitole se vycházelo zejména z díla Jiřího Cajthamla \textit{Analýza starých map v digitálním prostředí na příkladu Műllerových map Čech a Moravy}, ze studijního materiálu od Zdeňka Skořepy \textit{Geodézie 4} a z nápovědy k programu ArcGIS. V rámci aplikace ArcMap je možné při georeferencování zvolit transformaci polynomickou, křivkovou, vyrovnávací či projektivní. V této kapitole budou tyto typy transformací stručně popsány. \cite{transformace} \cite{skorepa} \cite{gis_transformace} \cite{vugtk}
+
+
+
+\section{Polynomická transformace}
+Polynomickou či mnohočlennou transformaci lze v programu ArcMap zvolit buď nultého, prvního, druhého či třetího řádu. U polynomické transformace je počítán rozdíl mezi zdrojovými a cílovými souřadnicemi. Hlavním cílem je tedy snaha o nalezení obecného způsobu výpočtu transformačního klíče, který je následně aplikován na všechny body. Použití polynomické transformace je tedy vhodný při snaze o dosažení maximální globální přesnosti na úkor lokální přesnosti.
+
+Obecně lze pro zjištění počtu parametrů polynomické transformace použít funkci \eqref{poly_param}, kde je za \textit{n} dosazen stupeň zvolené polynomické transformace. 
+
+\begin{align}
+   \label{poly_param} n^2 + 3n + 2
+\end{align}
+
+
+\subsection{Polynomická transformace nultého řádu}
+Polynomická transformace nultého řádu vyžaduje dle funkce \eqref{poly_param} znalost souřadnic jednoho bodu. Při této transformaci dochází pouze k posunu rastru, je tedy převážně využívaná v případě, kdy je rastr již zgeoreferencován a uživatel se snaží rastr zarovnat, např. vůči již zgeoreferencovanému rastru.
+
+\subsection{Afinní transformace}
+Polynomická transformace prvního řádu bývá též označována jako afinní transformace. Matematicky je afinní transformace definována změnou měřítka, posunem, rotací a zkosením obrazu. Je často využívána při georeferencování rastrů, u nichž dochází ke srážce a rastr se smršťuje v určitém směru. Afinní transformace zachovává rovnoběžnost přímek. Dle funkce \eqref{poly_param} je pro výpočet nutná znalost alespoň 3 bodů.  Při více bodech již dochází k vyrovnání MNČ. 
+
+Tvar afinních transformačních rovnic je dán vztahem \eqref{afinni}.
+
+\begin{align}  \label{afinni} 
+\begin{split}
+x' &= m_x cos(\omega_x) x - m_y sin(\omega_y) y + X_t \\
+y' &= m_x sin(\omega_x) x + m_y cos(\omega_y) y + Y_t
+\end{split}
+\end{align}
+
+Do výpočtu vstupuje 6 neznámých. Z toho důvodu, že tyto neznámé nejsou v lineárním vztahu, je vhodné provést substituci \eqref{substituce}.
+
+\begin{align}  \label{substituce} 
+\begin{split}
+a &= m_x cos(\omega_x) \\
+b &= - m_y sin(\omega_y) \\
+c &= m_x sin(\omega_x)\\
+d &= m_y cos(\omega_y)
+\end{split}
+\end{align}
+
+Po využití substituce jsou vztahy \eqref{afinni} zjednodušeny.
+
+\begin{align}  \label{afinni_sub} 
+\begin{split}
+x' &= ax - by + X_t \\
+y' &= cx + dy + Y_t
+\end{split}
+\end{align}
+
+Vektor neznámých, který obsahuje prvky transformačního klíče, má poté tvar:
+
+\begin{align} \label{aff_klic}
+x = (a, b, c, d, X_t, Y_t)^T
+\end{align}
+
+Matice plánu A má tvar:
+
+\begin{align} \label{aff_matA}
+A = \begin{pmatrix}
+    x_1 & y_1 & 0 & 0 & 1 & 0 \\
+    \vdots & \vdots & \vdots & \vdots & \vdots & \vdots \\
+    x_n & y_n & 0 & 0 & 1 & 0 \\
+    0 & 0 & x_1 & y_1 & 0 & 1 \\
+    \vdots & \vdots & \vdots & \vdots & \vdots & \vdots \\
+    0 & 0 & x_n & y_n & 0 & 1 \\
+\end{pmatrix}
+\end{align}
+
+Vektor měření l lze následně zapsat:
+
+\begin{align} \label{aff_l}
+l = (x_1', \ldots , x_n', y_1', \ldots , y_n')^T
+\end{align}
+
+Vyrovnané neznámé jsou následně získány z rovnice \eqref{aff_res}.
+
+\begin{align} \label{aff_res}
+x = (A^TA)^{-1} (A^Tl)
+\end{align}
+
+Zpětnou substitucí lze následně dopočítat měřítko a rotaci.
+
+\begin{align} \label{aff_vysledek}
+\begin{split}
+m_x &= \sqrt{a^2 + c^2} \\
+m_y &= \sqrt{b^2 + d^2} \\
+\omega_x &= arctg(\frac{c}{a}) \\
+\omega_y &= arctg(-\frac{b}{d}) 
+\end{split}
+\end{align}
+
+\subsection{Polynomická transformace vyššího řádu}
+
+
+
+
+
+
+
+
+
 \chapter{Příprava dat}
+
+
+
 
 \section{Tvorba 3D modelu Strakonického hradu}
 Tvorba 3D modelu Strakonického hradu probíhala v programu SketchUp, který vyvinula americká společnost Last Software. Velkou výhodou tohoto programu je to, že umožňuje vytvořený objekt propojit s libovolným softwarem GIS a umístit jej v prostoru. 
@@ -403,7 +512,7 @@ Dílčí části Strakonického hradu byly vytvářeny lomenými čarami a oblou
 
 Fotografování v tomto poměrně velkém časovém rozmezí bylo zapřičiněno z~několika důvodů. Hlavní vliv na fotografování měly restaurátorské práce, neboť je hrad v rozsáhlé rekonstrukci. Dalším činitelem bylo počasí a povětrnostní podmínky. V neposlední řadě má vliv i časové období, kdy je fotografování prováděno. U částí hradu, kde je znatelná vegetace, se počkalo na jaro na hlavní vegetační období, aby nebyly fotografie mdlé.
 
-Velká výhoda softwaru Sketchup je ta, že lze projekt geolokalizovat. Geolokalizace vzniká jednoduchou volbou \textit{File $\rightarrow$ Geo-location $\rightarrow$ Add \mbox{location ... }}. Model byl publikován na webovou stránku 3D Warehouse pomocí volby \textit{File $\rightarrow$ 3D Warehouse $\rightarrow$ Share Model ... }. Zároveň byla vytvořena krátka animace, ve~které byla snaha zachytit model z několika různých pohledů. Tato animace je součástí příloh a byla publikována na server YouTube, který v současné době spadá také pod společnost Google a prezentuje se jako dceřiná společnost této firmy. 
+Velká výhoda softwaru Sketchup je ta, že lze projekt geolokalizovat. Geolokalizace vzniká jednoduchou volbou \textit{File $\rightarrow$ Geo-location $\rightarrow$ Add \mbox{location ... }}. Model byl publikován na webovou stránku 3D Warehouse pomocí volby funkce \textit{File $\rightarrow$ 3D Warehouse $\rightarrow$ Share Model ... }. Zároveň byla vytvořena krátka animace, ve~které byla snaha zachytit model z několika různých pohledů. Tato animace je součástí příloh a byla publikována na server YouTube, který v současné době spadá také pod společnost Google a prezentuje se jako dceřiná společnost této firmy. 
 
 Při zpracování byla nejprve v modelu vytvořena gotická věž Rumpál (obr. č. \ref{obrazek:sk1}), která je nejspíš nejvýraznější ikona hradu. Následně bylo vymodelováno II. hlavní nádvoří (obr. č. \ref{obrazek:sk2}). Poté byl vytvořen kostel sv. Prokopa s ním související I. hlavní nádvoří (obr. č. \ref{obrazek:sk3}). Na obrázku č. \ref{obrazek:sk4} lze vidět výsledný model, na obrázku č. \ref{obrazek:sk5} je zobrazen tento model včetně textur. Na obrázku č. XX je již finální podoba hradu se všemi detaily.
 
@@ -450,16 +559,26 @@ Animace - youtube, celý model - 3D warehouse, nějaké porovnání fotografií 
 
 \section{Zpracování kartografických podkladů}
 
+Císařské povinné otisky stabilního katastru a Státní mapa odvozená byly zapůjčeny od Českého úřadu zeměměřického a katastrálního ve formátu JPG ve formě rastrových dat. Tato data bylo nutné zgeoreferencovat \footnote{Proces umístění rastru do známého souřadnicového systému}. Pro georeferencování byl použit systém ArcGIS od společnosti ESRI. 
+
+ArcGIS vyvinula již zmíněná společnost ESRI, která se zabývá vývojem softwaru pro práci s geografickými informačními systémy. Zakladatelem společnosti byl Jack Dangermond. ArcGIS je primárně určen pro práci s prostorovými daty, jejich tvorbu, správu či analýzu.
+
+Před samotným zpracováním byla zapotřebí příprava prostředí a mapového okna v programu ArcMap. Nejprve byla vytvořena geodatabáze \textit{Otava.gdb}. Geodatabáze je interní formát společnosti ESRI, který slouží k ukládání a manipulaci s prostorovými daty. Velkou výhodou je to, že všechny soubory jsou uloženy v jednom adresáři. Pro geodatabázi lze nastavit i defaultní souřadnicový systém, pro databázi \textit{Otava.gdb} byl zvolen S-JTSK Krovak East North (EPSG: 5514).
+
+(sepsat stromovitě feature class, relativní cesta)
+
+V této práci byl použit program ArcGIS použit zejména pro georeferencování mapových rastrů, dále pro tvorbu dílčích tematických map a 3D vizualizaci vytvořené krajiny. Při georeferencování je potřebná znalost tzv. identických či vlícovacích bodů, tedy takových bodů, jejichž souřadnice jsou známy jak v mapovém obraze, tak ve vybraném souřadnicovém systému. Nejvhodnějšími identickými body jsou body mapového rámu, souřadnicové sítě či objekty, u nichž se předpokládá určitá stabilita (půdorysy kostelů, body triangulační sítě...). 
+
+Pro georeferencování posloužila jako podkladová data katastrální mapy, jež jsou k dispozici online prostřednictvím WMS služby poskytnuté ze serveru ČÚZK.  Jako vlícovací body byly u prvního rastru voleny přednostně takové body, u kterých se předpokládá již zmíněná stabilita a neměnnost. U dalších rastrů byly vlícovací body voleny s ohledem na klad mapových listů a plynulou návaznost se sousedními rastry. Vzhledem k měřítku mapových podkladů byl požadavek na maximální hodnotu směrodatné odchylky 2,5 m. 
+
 zde stručně představit arcgis, začátek, tvorba databáze, relativní cesta atd atd
 
 \section{Transformace}
-Císařské povinné otisky stabilního katastru a Státní mapa odvozená byly zapůjčeny od Českého úradu zeměměřického a katastrálního ve formátu JPG ve formě rastrových dat. Tato data bylo nutné zgeoreferencovat \footnote{Proces umístění rastru do známého souřadnicového systému}. Pro georeferencování byl použit program ArcGIS od společnosti ESRI. Zvolený souřadnicový systém byl S-JTSK Krovak East North (EPSG: 5514). 
+Při georeferencování mapových podkladů je nutné využít znalosti týkající se transformace. Transformací lze označit proces, při němž dochází k přechodu z jedné soustavy do druhé. V případě rastrových podkladů se jedná o transformaci z místní soustavy do uživatelem zvolené, v tomto případě do soustavy S-JTSK Krovak East North (EPSG: 5514). 
 
-Pro georeferencování posloužila jako podkladová data katastrální mapy, jež jsou k dispozici online prostřednictvím WMS služby poskytnuté ze serveru ČÚZK.  Jako vlícovací body byly u prvního rastru voleny přednostně takové body, u kterých se předpokládá určitá stabilita (půdorysy kostelů, hradu). U dalších rastrů byly vlícovací body voleny s ohledem na klad mapových listů a plynulou návaznost se sousedními rastry. Vzhledem k měřítku mapových podkladů byl požadavek na maximální hodnotu směrodatné odchylky 2,5 m. 
+Níže jsou popsány jednotlivé typy transformací, z nichž bylo velké množství použito při zpracování získaných dat. Při volbě vhodné transformace je potřeba zhodnotit množství a rozmístění identických bodů.
 
-Níže jsou popsány jednotlivé typy transformací, z nichž bylo velké množství použito při zpracování získaných dat. 
-
-\subsection{Jednotlivé transformace}
+\subsection{Obecná transformace}
 
 \subsection{Transformace v praxi}
 výřezy z ArcGISU, volba vlícováků, zhodnocení tabulky přesností atd atd
