--- a/text/mybibliographyfile.bib
+++ b/text/mybibliographyfile.bib
@@ -314,3 +314,25 @@ the_Qu'Appelle_River_Southern_Saskatchewan/download"
   author = "Hrdlička spol. s r. o.",
 }
 
+@book{skorepa,
+  author = "Zdeněk Skořepa",
+  title = "Geodézie 4",
+  publisher = "Česká technika",
+  year = "2014",
+  ISBN = "978-80-01-05481-9",
+}
+
+@misc{gis_transformace,
+  title = "ArcGIS Desktop",
+  url = "https://pro.arcgis.com/en/pro-app/",
+  howpublished = "[online]",
+  note = "[cit. 2.5.2019]",
+}
+
+
+@misc{vugtk,
+  title = "Terminologický slovník zeměměřictví a katastru nemovitostí",
+  url = "https://www.vugtk.cz/slovnik/index.php",
+  howpublished = "[online]",
+  note = "[cit. 2.5.2019]",
+}
