--- a/text/mybibliographyfile.bib
+++ b/text/mybibliographyfile.bib
@@ -336,3 +336,17 @@ the_Qu'Appelle_River_Southern_Saskatchewan/download"
   howpublished = "[online]",
   note = "[cit. 2.5.2019]",
 }
+
+@misc{pappova,
+  title = "Pappova věta",
+  url = "https://cs.wikipedia.org/wiki/Pappova_v\%C4\%9Bta",
+  howpublished = "[online]",
+  note = "[cit. 14.5.2019]",
+}
+
+@misc{malimankova,
+  title = "Tvorba datového modelu Crigingerovy mapy v ArcGIS",
+  url = "http://maps.fsv.cvut.cz/diplomky/2008_BP_Malimankova_Tvorba_datoveho_modelu_Crigingerovy_mapy_v_ArcGIS.pdf",
+  howpublished = "[online]",
+  note = "[cit. 14.5.2019]",
+}
